# AthletiX

./: .gitignore  README.md
contract/: Cargo.toml
contract/.cargo/: config
contract/src/: lib.rs
frontend/: app.js  package.json
frontend/public/: index.html  script.js  styles.css
