[package]
name = "athleti_x"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.4.0", features = ["staking"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.106" }
cw-storage-plus = "1.1.0"

[dev-dependencies]
cw-multi-test = "0.16.5"
rand="0.8.5"
